# Coriolis_Bowling

./: .gitignore  CMakeLists.txt  Coriolis_Bowling  Coriolis_Bowling2  README.md  common.h  common.h.in  main.cpp  tiny_obj_loader.h
data/Bowling_ball/: Bowling_Ball.stl
data/Bowling_ball/Bowling Ball Variations/black/: Black Bowling Ball.3ds
data/Bowling_ball/Bowling Ball Variations/blue/: Blue Bowling Ball.3ds
data/Bowling_ball/Bowling Ball Variations/green/: Green Bowling Ball.3ds
data/Bowling_ball/Bowling Ball Variations/pink/: Pink Bowling Ball.3ds  Pink Bowling Ball.stl
data/Bowling_ball/Bowling Ball Variations/red/: Red Bowling Ball.3ds
data/bowling_pin/: bowling.mtl
